src/components/navigation/styles.module.css
.container {
    position: fixed;
    left: 50%;
    transform: translateX(-50%);
    max-width: var(--max-width);
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    gap: 36px;
    padding: 12px 12px 12px 36px;
    width: 100%;
    z-index: 99;
}

.linkContainer {
    display: flex;
}

.navButton {
    display: none;
    user-select: none;
    cursor: pointer;
    background-color: var(--color-white);
    border-radius: var(--border-radius);
    /* box-shadow: var(--shadow-regular); */
    height: fit-content;
    width: 50px;
    height: 50px;

}

.navButton>p {
    padding-bottom: 2px;
    font-size: 30px;
}

.menuContainerDesktop {
    display: flex;
    align-items: center;
    gap: 12px;
}

.menuWrapperMobile {
    display: none;
}

.buttonBox {
    display: flex;
    gap: 8px;
    border-radius: var(--border-radius);
    box-shadow: var(--shadow-regular);
    overflow: hidden;
}

.contentBox {
    display: flex;
    align-items: center;
    height: fit-content;
    min-height: 52px;
    padding: 8px;
    gap: 36px;
    background-color: var(--color-white);
    border-radius: var(--border-radius);
    box-shadow: var(--shadow-regular);
}

.menuContainerMobile {
    display: none;
    background-color: var(--color-white);
    border-radius: var(--border-radius);
    box-shadow: var(--shadow-regular);
    height: fit-content;
    padding: 8px 8px 8px 24px;
}

.wordmark {
    font-family: Recoleta;
    font-size: 32px;
    font-weight: 700;
}

.navButton {
    display: none;
}

@media (max-width: 1050px) {
    .container {
        padding: 12px;
    }

    .navButton {
        display: flex;
        outline: none;
        border: none;
        align-items: center;
        justify-content: center;
        font-size: 32px;
        border: 8px solid var(--color-white);
        color: var(--color-black);
        transition: .3s;
        z-index: 2;
        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
    }
    .navButton:hover {
        background-color: rgb(245, 245, 245);
    }

    .navButtonActive {
        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0);
    }

    .menuContainerDesktop {
        display: none;
    }

    .menuWrapperMobile {
        display: flex;
        align-items: center;
        gap: 12px;
    }

    .menuContainerMobile {
        position: fixed;
        display: flex;
        align-items: center;
        gap: 36px;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        top: 0;
        right: 0;
        width: 100%;
        height: 100vh;
        padding: 0 48px 48px 48px;
        transform-origin: calc(100% - 18px) 18px;
        transform: scale(0);
        border-radius: 48px;
        z-index: 1;
        transition: .3s;
    }

    .menuContainerMobile a {
        opacity: 0;
        text-align: center;
        transition: .3s;
    }

    .menuContainerMobileActive {
        transform: scale(1);
        border-radius: 0;
    }

    .menuContainerMobileActive a {
        opacity: 1
    }

    .mobileButton {
        display: flex;
        justify-content: center;
        align-items: center;
    }




}

